Revision history for MetaCPAN-Client (previously MetaCPAN-API)

1.001000    09.04.14
            * Updated tests to work on older versions of perl.

1.000001    03.04.14
            * changed Elasticsearch (deprecated) to Search::Elasticsearch (official)

1.000000    02.04.14
            ** Completely rewritten **
            MetaCPAN::API has been completely rewritten as MetaCPAN::Client.

            Other than the different name (to match MetaCPAN itself), the
            following changes had been made:
                * MetaCPAN::Client is officially part of MetaCPAN
                * Semantic Versioning (semver) scheme
                * Moo as object system
                * All entities are now objects
                * Using Elasticsearch.pm for complex queries
                * Rich syntax for nested queries (AND/OR)
                * Simple queries return entity objects
                * Complex queries return resultset objects (with iterator)
                * Support for scrolled searches
                * Inline support for ElasticSearch facets
                * Documentation, tests - all cleaned, rewritten

0.43        05.04.12
            * Add example in POD of advanced usage with cache by Kent Fredric.
              (Gist: https://gist.github.com/1291928)
            * Sort keys in param join - more predictable result.

0.42        08.01.12
            * Corrected documentation in MetaCPAN::API::Source.
            * Updated Dist::Zilla configuration, added more tests.

0.41        07.01.12
            * Use Test::TinyMocker 0.02 syntax in tests to avoid test fails.

0.40        06.01.12
            * Fixed JSON encoding so ElasticSearch won't fail.
              (Christian Walde)
            * Documentation fixes (Logan - logie17).

0.34        02.10.11
            * Added MetaCPAN::API::Source (Renee Baecker).
            * Fix of HTTP::Tiny content-type in options (Renee Baecker).
            * Typo fix (Olaf Alders, reported by @doherty).
