@@ -299,7 +299,8 @@ Simple searches just contain keys and values:
     my $author = $mcpan->author( { pauseid => 'MICKEY' } );
 
     # find all people named Dave, not covering Davids
-    my @daves = $mcpan->author( { name => 'Dave *' } );
+    # will return a resultset
+    my $daves = $mcpan->author( { name => 'Dave *' } );
 
 =head2 OR
 
@@ -308,7 +309,7 @@ such as "this or that", you can use the following syntax with the C<either>
 key:
 
     # any author named "Dave" or "David"
-    my @daves = $mcpan->author( {
+    my $daves = $mcpan->author( {
         either => [
             { name => 'Dave *'  },
             { name => 'David *' },
@@ -322,7 +323,7 @@ such as "this and that", you can use the following syntax with the C<all>
 key:
 
     # any users named 'John' with a Gmail account
-    my @gravatar_johns = $mcpan->author( {
+    my $johns = $mcpan->author( {
         all => [
             { name  => 'John *'     },
             { email => '*gmail.com' },
