@@ -1,6 +1,8 @@
 Revision history for MetaCPAN-Client (previously MetaCPAN-API)
 
 1.001000    09.04.14
+            * Add tests for complex queries (two levels deep).
+            * Correct documentation on complex queries.
             * Updated tests to work on older versions of perl.
 
 1.000001    03.04.14
